# breakpoint-proximity-chat

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
include/: datagram.h  dto.h
resources/: default-config.json
src/plugin/: ClientStateManager.cpp  ClientStateManager.h  GameHandler.cpp  GameHandler.h  Logger.cpp  Logger.h  NetworkManager.cpp  NetworkManager.h  PluginConfig.cpp  PluginConfig.h  PluginManager.cpp  PluginManager.h  PluginState.h  RadioAudioProcessor.cpp  RadioAudioProcessor.h  Vector3f.cpp  Vector3f.h  VolumeUtil.h  main.cpp  main.h
src/plugin/game/: GRB.cpp  GRB.h  GRBVulkan.cpp  GRBVulkan.h  GameHandler.cpp  GameHandler.h  GameIntegration.h  GameState.h  ProcessWrapper.cpp  ProcessWrapper.h
src/server/: PositionLogger.cpp  PositionLogger.h  StateManager.cpp  StateManager.h  main.cpp
src/test_tool/: main.cpp
